--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 #player {
     width: 50%;
     height: 50%;
+    border-right: solid black 2px;
 }
 
 #computer {
@@ -21,13 +22,22 @@ h2, h3 {
     grid-template-columns: auto auto auto;
     grid-column-gap: 50px;
     width: 40%;
-    margin: 100px auto;
+    margin: 50px auto;
 }
 .inventory img {
     width: 100px;
     height: 100px;
     border: solid black 2px;
 }
+.inventory img:hover {
+    cursor: pointer;
+}
 .inventory p {
     text-align: center
+}
+.decision {
+    width: 30%;
+    display: block;
+    margin: 0 auto;
+    border: solid black 2px;
 }
